add: 型パターンマッチング

--- a/06_Jupyter_typing.ipynb
+++ b/06_Jupyter_typing.ipynb
@@ -838,6 +838,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 型パターンマッチング\n",
+    "\n",
+    "型で縛ることにより、例外処理を減らし、コードをシンプルに保つことができる\n",
+    "\n",
+    "以下、値による分岐と、型による分岐を対比し、型パターンマッチングの強力さを体感する\n",
+    "\n",
+    "```julia\n",
+    "# --- 値による分岐 ---\n",
+    "## 性別により出力する挨拶を変更する\n",
+    "hello(name::String, sex::String=\"male\") = begin\n",
+    "    if sex === \"male\"\n",
+    "        # 性別が男性の場合\n",
+    "        println(\"吾輩は\" * name * \"である\")\n",
+    "    elseif sex === \"female\"\n",
+    "        # 性別が女性の場合\n",
+    "        println(\"私は\" * name * \"です\")\n",
+    "    else\n",
+    "        # 想定されていない値 = 例外\n",
+    "        println(\"性別は male か female を指定してください\")\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "## 上記 hello関数は文字列ならなんでも受け入れるため 想定外の問題が起こりうる\n",
+    "## 例えば、性別として「男性」を指定するつもりで\"man\"を渡したりする可能性がある\n",
+    "### \"吾輩はJohnである\" と出力されることを期待\n",
+    "hello(\"John\", \"man\")\n",
+    "\n",
+    "### -> 実際には \"性別は male か female を指定してください\" と出力される\n",
+    "\n",
+    "\n",
+    "# --- 型による分岐 ---\n",
+    "## 性別を表現する複合型を定義する\n",
+    "struct Male\n",
+    "    name::String\n",
+    "end\n",
+    "\n",
+    "struct Female\n",
+    "    name::String\n",
+    "end\n",
+    "\n",
+    "## 男性の場合の挨拶\n",
+    "hello(person::Male) = println(\"吾輩は\" * person.name * \"である\")\n",
+    "\n",
+    "## 女性の場合の挨拶\n",
+    "hello(person::Female) = println(\"私は\" * person.name * \"です\")\n",
+    "\n",
+    "## 上記 hello関数は Male か Female しか受け入れないため 想定外の問題は起こり得ない\n",
+    "### -> コンパイルエラーで止まってくれる\n",
+    "```\n",
+    "\n",
+    "### Matchパッケージ\n",
+    "型パターンマッチングを行うのに有用なパッケージとして`Match`パッケージがある\n",
+    "\n",
+    "#### インストール\n",
+    "インストールは、以下のいずれかの方法で行う\n",
+    "\n",
+    "- REPLのパッケージモードで `add Match` コマンドを叩く\n",
+    "- コマンドラインで `julia -e 'using Pkg; Pkg.add(\"Match\")'` を実行\n",
+    "\n",
+    "#### 使い方\n",
+    "```julia\n",
+    "@match 変数 begin\n",
+    "    パターン1 => マッチング1\n",
+    "    パターン2 => マッチング2\n",
+    "    # ...\n",
+    "end\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hello (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matchパッケージを使う\n",
+    "using Match\n",
+    "\n",
+    "# 性別表現の抽象型定義\n",
+    "abstract type Male end\n",
+    "abstract type Female end\n",
+    "\n",
+    "# 型パターンマッチングを行うためシングルトンの合併型を定義\n",
+    "const Sex = Union{Type{Male}, Type{Female}}\n",
+    "\n",
+    "# 性別により出力する挨拶を変更する関数\n",
+    "hello(name::String, sex::Sex) = begin\n",
+    "    @match sex begin\n",
+    "        m::Type{Male}   => println(\"吾輩は$(name)である\")\n",
+    "        f::Type{Female} => println(\"私は$(name)です\")\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "吾輩は一郎である\n",
+      "私は花子です\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hello関数のsexは Male or Female のみ受け付ける\n",
+    "hello(\"一郎\", Male)\n",
+    "hello(\"花子\", Female)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching hello(::String, ::String)\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching hello(::String, ::String)\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[19]:1"
+     ]
+    }
+   ],
+   "source": [
+    "# 想定外の値が渡されればコンパイル時点でエラーになる\n",
+    "hello(\"John\", \"Male\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching hello(::String, ::Type{Union{Type{Female}, Type{Male}}})\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching hello(::String, ::Type{Union{Type{Female}, Type{Male}}})\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[20]:1"
+     ]
+    }
+   ],
+   "source": [
+    "# 合併型そのものを渡されてもコンパイルエラーになる\n",
+    "hello(\"存在X\", Sex)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
