add: 文字列置換

--- a/02_Julia_types.ipynb
+++ b/02_Julia_types.ipynb
@@ -661,6 +661,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 文字列置換\n",
+    "`replace`関数を使い、文字列を置換できる\n",
+    "\n",
+    "```julia\n",
+    "replace(置換対象文字列::String, 置換パターン::Pair{Pattern, Replaced}; count::Integer=typemax(Int))\n",
+    "\n",
+    "# 全ての\"a\"を\"A\"に置換\n",
+    "replace(\"apple banana\", \"a\" => \"A\")\n",
+    "## -> \"Apple bAnAnA\"\n",
+    "\n",
+    "# \"a\"を1つだけ\"A\"に置換\n",
+    "replace(\"apple banana\", \"a\" => \"A\"; count=1)\n",
+    "## -> \"Apple banana\"\n",
+    "\n",
+    "# 正規表現による置換\n",
+    "## Replacedには関数を渡すことが可能\n",
+    "replace(\"apple banana\", r\"\\s([a-z])\" => uppercase)\n",
+    "## -> \"apple Banana\"\n",
+    "\n",
+    "# Replaced: special substring\n",
+    "## s\"\\n\" で n番目のキャプチャを表現できる (n::Int)\n",
+    "replace(\"AppleBanana\", r\"([A-Z])\" => s\"_\\1\")\n",
+    "## -> \"_Apple_Banana\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"snake_case\""
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# CamelCase を snake_case に変換する\n",
+    "snakecase = replace(\"CamelCase\", \"Camel\" => \"Snake\") # -> \"SnakeCase\"\n",
+    "snakecase = replace(snakecase, r\"([A-Z])\" => c -> \"_\" * lowercase(c)) # -> \"_snake_case\"\n",
+    "snakecase = replace(snakecase, r\"^_\" => s\"\") # -> \"snake_cake\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## シンボル\n",
     "\n",
     "Juliaには `:symbol` で表現される `Symbol`型が存在する\n",
@@ -672,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +753,7 @@
        "Base.dump"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +850,7 @@
        "RegexMatch(\"12:45\", hour=\"12\", minute=\"45\")"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
