add: identicon: image

--- a/EX_identicon.ipynb
+++ b/EX_identicon.ipynb
@@ -143,15 +143,20 @@
     "#### パターンの決定\n",
     "パターンは以下のように、5x5のピクセルから成る\n",
     "\n",
+    "![identicon00.png](./img/identicon00.png)\n",
+    "\n",
     "ハッシュ値の前から15文字を使って以下のようにパターンを決定する\n",
     "\n",
-    "ハッシュ値が偶数ならピクセルをON，奇数ならピクセルをOFFにする\n",
-    "\n",
-    "順番は真ん中の列の上から下、その右の列の上から下、最後に右端の列の上から下の順とする\n",
+    "- ハッシュ値が偶数ならピクセルをON，奇数ならピクセルをOFFにする\n",
+    "- 順番は真ん中の列の上から下、その右の列の上から下、最後に右端の列の上から下の順とする\n",
     "\n",
     "ex) da9701f509fd65331303f9382088b168 -> da9701f509fd653\n",
     "\n",
+    "![identicon01.png](./img/identicon01.png)\n",
+    "\n",
     "以下のように、真ん中の列を中心に線対称に折り返す\n",
+    "\n",
+    "![identicon02.png](./img/identicon02.png)\n",
     "\n",
     "これでパターンが完成する\n",
     "\n",
