add: 備忘録: 配列操作

--- a/EX_identicon.ipynb
+++ b/EX_identicon.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "make_identicon (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,6 +633,70 @@
     "# 参考サイトのユーザID\n",
     "## 同一の画像が生成されるか確認\n",
     "make_identicon(\"19229051\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAGQAAABkAQMAAABKLAcXAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAABlBMVEXNlmb///9IpOjYAAAAAWJLR0QB/wIt3gAAADBJREFUOMtjYGDg//8fSoDAKA/C+///AxIxykPhMcBCaJQHTyuDKO0OOh4YjPKQeAAKM1XH9LpcGQAAAABJRU5ErkJggg==",
+      "text/plain": [
+       "5×5 Array{RGB{Any},2} with eltype RGB:\n",
+       " RGB{Float64}(0.803072,0.58958,0.398889)  …  RGB{Float64}(0.803072,0.58958,0.398889)\n",
+       " RGB{Float64}(1.0,1.0,1.0)                   RGB{Float64}(1.0,1.0,1.0)              \n",
+       " RGB{Float64}(1.0,1.0,1.0)                   RGB{Float64}(1.0,1.0,1.0)              \n",
+       " RGB{Float64}(0.803072,0.58958,0.398889)     RGB{Float64}(0.803072,0.58958,0.398889)\n",
+       " RGB{Float64}(0.803072,0.58958,0.398889)     RGB{Float64}(0.803072,0.58958,0.398889)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_identicon(\"amenoyoya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAGQAAABkAgMAAAANjH3HAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACVBMVEX//2b////WkH/MW182AAAAAWJLR0QB/wIt3gAAAD9JREFUSMdjYACBUBBAYzGMyowkGQRzFQggiY3KjCQZBB8BIGKjMiNJBo2JrnBUZiTJgIsGsCDWumRUZtjLAADey1XHoYW35wAAAABJRU5ErkJggg==",
+      "text/plain": [
+       "5×5 Array{RGB{Float64},2} with eltype RGB{Float64}:\n",
+       " RGB{Float64}(1.0,1.0,0.398889)            …  RGB{Float64}(1.0,1.0,0.398889)          \n",
+       " RGB{Float64}(1.0,1.0,1.0)                    RGB{Float64}(1.0,1.0,1.0)               \n",
+       " RGB{Float64}(0.837921,0.566489,0.498941)     RGB{Float64}(0.837921,0.566489,0.498941)\n",
+       " RGB{Float64}(1.0,1.0,0.398889)               RGB{Float64}(1.0,1.0,0.398889)          \n",
+       " RGB{Float64}(1.0,1.0,0.398889)               RGB{Float64}(1.0,1.0,0.398889)          "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idimg = make_identicon(\"46098475\")\n",
+    "nameimg = make_identicon(\"amenoyoya\")\n",
+    "\n",
+    "overlay(a::Float64, b::Float64)::Float64 =\n",
+    "    a < 0.5 ? a * b : 2 * (a + b - a * b) - 1.0\n",
+    "\n",
+    "overlay(a::RGB{Float64}, b::RGB{Float64})::RGB{Float64} = RGB(\n",
+    "    overlay(a.r, b.r), overlay(a.g, b.g), overlay(a.b, b.b)\n",
+    ")\n",
+    "\n",
+    "blend(a::RGB{Float64}, b::RGB{Float64})::RGB{Float64} = RGB(a.r * b.r, a.g * b.g, a.b * b.b)\n",
+    "\n",
+    "overlay.(nameimg, idimg) |> a -> blend.(a, idimg)"
    ]
   },
   {
