add: ドット絵作成方法

--- a/Memo_Array.ipynb
+++ b/Memo_Array.ipynb
@@ -50,7 +50,7 @@
     "    - 要素数分 0 で埋めた配列が生成される\n",
     "- ones: `ones([型,] 要素数)`\n",
     "    - 要素数分 1 で埋めた配列が生成される\n",
-    "- fill: `fill([型,] 要素, 要素数)`\n",
+    "- fill: `fill(要素, 要素数)`\n",
     "    - 要素数分、指定要素で埋めた配列が生成される"
    ]
   },
