--- a/Memo_Array.ipynb
+++ b/Memo_Array.ipynb
@@ -374,6 +374,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 入れ子配列の行列化\n",
+    "C言語等、テンソルを `Array{Array{Type, 1}, 1}` のような入れ子配列で表す言語に慣れていると、Juliaの行列がよくわからなくなることが多い\n",
+    "\n",
+    "そのような時は、一旦入れ子配列にした後で行列化するという操作が必要になる\n",
+    "\n",
+    "この操作は、基本的には、水平全結合（`hcat(vec...)`）もしくは垂直全結合（`vcat(vec...)`）を使えば実現できる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v: 6×1 Array{Int64,1} [1, 2, 3, 4, 5, 6]\n",
+      "h: 3×2 Array{Int64,2} [1 4; 2 5; 3 6]\n",
+      "v: 2×3 Array{Int64,2} [1 3 5; 2 4 6]\n",
+      "h: 2×3 LinearAlgebra.Adjoint{Int64,Array{Int64,2}} [1 2 3; 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2-Array{3-Array{Int, 1}, 1}\n",
+    "a = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "]\n",
+    "\n",
+    "# 6 x 1 Array{Int, 2} にしたい場合: vcat\n",
+    "v = vcat(a...)\n",
+    "println(\"v: $(size(v,1))×$(size(v,2)) $(typeof(v)) $(v)\")\n",
+    "\n",
+    "# 3 x 2 Array{Int, 2} にしたい場合: hcat\n",
+    "h = hcat(a...)\n",
+    "println(\"h: $(size(h,1))×$(size(h,2)) $(typeof(h)) $(h)\")\n",
+    "\n",
+    "# 2 x 3 Array{Int, 2} にしたい場合\n",
+    "## vcat |> reshape\n",
+    "v = reshape(vcat(a...), 2, 3)\n",
+    "println(\"v: $(size(v,1))×$(size(v,2)) $(typeof(v)) $(v)\")\n",
+    "\n",
+    "## hcat |> transpose\n",
+    "h = hcat(a...)'\n",
+    "println(\"h: $(size(h,1))×$(size(h,2)) $(typeof(h)) $(h)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 行列の内積\n",
     "\n",
     "行列の内積は `tensorA * tensorB` で表され、行列の各要素の乗算である `tensorA .* tensorB` とは明確に区別される\n",
