--- a/06_Jupyter_typing.ipynb
+++ b/06_Jupyter_typing.ipynb
@@ -448,7 +448,7 @@
       "setfield! immutable struct of type Human cannot be changed",
       "",
       "Stacktrace:",
-      " [1] setproperty!(::Human, ::Symbol, ::Int64) at ./sysimg.jl:19",
+      " [1] setproperty!(::Human, ::Symbol, ::Int64) at ./Base.jl:21",
       " [2] top-level scope at In[9]:1"
      ]
     }
@@ -916,6 +916,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Match [7eb4fadd-790c-5f42-8a69-bfa0b872bfbf]\n",
+      "└ @ Base loading.jl:1273\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "hello (generic function with 1 method)"
@@ -1020,15 +1028,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
