--- a/01_Julia_calculation.ipynb
+++ b/01_Julia_calculation.ipynb
@@ -138,10 +138,10 @@
    "outputs": [
     {
      "ename": "ErrorException",
-     "evalue": "cannot assign variable Base.+ from module Main",
+     "evalue": "cannot assign a value to variable Base.+ from module Main",
      "output_type": "error",
      "traceback": [
-      "cannot assign variable Base.+ from module Main",
+      "cannot assign a value to variable Base.+ from module Main",
       "",
       "Stacktrace:",
       " [1] top-level scope at In[6]:1"
@@ -884,6 +884,7 @@
     "\n",
     "#### 累乗、対数、根\n",
     "関数             | 概要\n",
+    ":--              | :--\n",
     "`sqrt(x)`, `√x` | x の平方根\n",
     "`cbrt(x)`, `∛x`  | x の立方根\n",
     "`hypot(x,y)`     | 長さ x および y をその他の辺に持つ直角三角形の斜辺\n",
@@ -936,15 +937,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
