--- a/04_Jupyter_expression.ipynb
+++ b/04_Jupyter_expression.ipynb
@@ -719,7 +719,7 @@
       "",
       "Stacktrace:",
       " [1] error(::String) at ./error.jl:33",
-      " [2] fopen(::getfield(Main, Symbol(\"##5#6\")), ::String, ::String) at ./In[17]:9",
+      " [2] fopen(::var\"#5#6\", ::String, ::String) at ./In[17]:9",
       " [3] fopen(::Function, ::String) at ./In[17]:5",
       " [4] top-level scope at In[17]:23"
      ]
@@ -765,15 +765,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
