--- a/08_PyCall.ipynb
+++ b/08_PyCall.ipynb
@@ -35,9 +35,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling PyCall [438e738f-606a-5dbb-bf0a-cddfbfd45ab0]\n",
+      "└ @ Base loading.jl:1273\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "v\"3.7.3\""
+       "v\"3.7.6\""
       ]
      },
      "execution_count": 1,
@@ -61,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/user/miniconda3/bin/python3\""
+       "\"/usr/local/bin/python3\""
       ]
      },
      "execution_count": 2,
@@ -82,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/user/miniconda3/lib/libpython3.7m.so.1.0\""
+       "\"/usr/local/lib/libpython3.7m.so.1.0\""
       ]
      },
      "execution_count": 3,
@@ -114,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "PyObject <module 'torch.nn.functional' from '/home/user/miniconda3/lib/python3.7/site-packages/torch/nn/functional.py'>"
+       "PyObject <module 'torch.nn.functional' from '/usr/local/lib/python3.7/site-packages/torch/nn/functional.py'>"
       ]
      },
      "execution_count": 4,
@@ -199,8 +207,8 @@
       ")\n",
       "10\n",
       "(6, 1, 5, 5)\n",
-      "PyObject tensor([[-0.0504,  0.0770, -0.0467, -0.0355, -0.0767,  0.0830, -0.0720,  0.0828,\n",
-      "         -0.0056, -0.0718]], grad_fn=<AddmmBackward>)\n"
+      "PyObject tensor([[-0.1100, -0.0749, -0.0433, -0.1204,  0.0254,  0.0469,  0.0304,  0.1249,\n",
+      "          0.1398,  0.0417]], grad_fn=<AddmmBackward>)\n"
      ]
     }
    ],
@@ -226,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyObject tensor(38.6390, grad_fn=<MseLossBackward>)\n"
+      "PyObject tensor(38.0227, grad_fn=<MseLossBackward>)\n"
      ]
     }
    ],
@@ -251,7 +259,7 @@
       "conv1.bias.grad before backward\n",
       "nothing\n",
       "conv1.bias.grad after backward\n",
-      "PyObject tensor([ 0.0361,  0.0454,  0.0251, -0.0240, -0.0288, -0.0490])\n"
+      "PyObject tensor([-0.0782, -0.0058, -0.1399, -0.0218, -0.0251,  0.0102])\n"
      ]
     }
    ],
@@ -278,19 +286,26 @@
     "loss.backward()\n",
     "optimizer.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
