--- a/Memo_Array.ipynb
+++ b/Memo_Array.ipynb
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: Array{Float64,1} [6.9521683573046e-310, 6.95216837715025e-310, 6.95216837715737e-310]\n",
+      "a: Array{Float64,1} [6.91073946044235e-310, 6.91075376470524e-310, 6.9107537654728e-310]\n",
       "z: Array{Float64,1} [0.0, 0.0]\n",
       "o: Array{Float64,1} [1.0, 1.0, 1.0, 1.0]\n",
       "f: Array{Float64,1} [1.23, 1.23, 1.23, 1.23, 1.23]\n"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,14 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: 1×3 Array{Int64,2} [1 3 4]\n"
+      "a: 1×3 Array{Int64,2} [1 3 4]\n",
+      "b: 2×2 Array{Int64,2} [1 2; 3 4]\n",
+      "c: 2×2 Array{Int64,2} [1 2; 3 4]\n"
      ]
     }
    ],
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +360,7 @@
        " 3  6  9"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +451,7 @@
        " 118"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +477,7 @@
        " 21  32"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,15 +500,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.2.0",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.2"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.2.0"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
